Se modificaron los titulos de los nav-links

--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <title>Marie Je_Suis</title>
 
     <link rel="shortcut icon" href="./img/alien.jpg">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/477ec0e3c0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
-
+            <div id="logo">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                Mari Tempone
+            </div>
+            <ul class="nav-links">
+                <li> <a href="#about">About</a> </li>
+                <li> <a href="#Work">Work</a> </li>
+                <li> <a href="./contact.html">Contact</a> </li>
+            </ul>
         </nav>
     </header>
 
