Trying to set up the grid

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/477ec0e3c0.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body> 
+    <!-- Delete body content for other pager -->
     <header>
         <nav>
             <div id="logo">
@@ -24,11 +25,60 @@
             </div>
             <ul class="nav-links">
                 <li> <a href="#about">About</a> </li>
-                <li> <a href="#Work">Work</a> </li>
+                <li> <a href="#workGeneral">Work</a> </li>
                 <li> <a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="introduction" class="d-flex">
+            <div class="container">
+                <div class="int-banner">
+                    <h1>
+                       Hi! I am Mari Tempone. <br>
+                       I am a graphic designer based in Buenos Aires <br>
+                       working on branding, visual identities, <br>
+                       editorial design and web design.
+                    </h1>
+                    <h5>
+                       <br><br> Scroll down to see my work!
+                    </h5>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="workGeneral">
+            <div id="visuals">
+                <img src="./img/pexels-sound-on-3761152.jpg" alt="">
+                <div class="workGeneral-detalle">
+                    <p class="workGeneral-detalle-titulo">Visuals</p>
+                    <p class="workGeneral-detalle-subtitulo">View all</p>
+                </div>
+            </div>
+            <div id="webDesign">
+                <img src="./img/pexels-junior-teixeira-2047905.jpg" alt="">
+                <div class="workGeneral-detalle">
+                    <p class="workGeneral-detalle-titulo">Web Design</p>
+                    <p class="workGeneral-detalle-subtitulo">View all</p>
+                </div>
+            </div>
+            <div id="Social Media">
+                <img src="./img/pexels-oladimeji-ajegbile-3314294.jpg" alt="">
+                <div class="workGeneral-detalle">
+                    <p class="workGeneral-detalle-titulo">Social Media</p>
+                    <p class="workGeneral-detalle-subtitulo">View all</p>
+                </div>
+            </div>
+            <div id="Google Adds">
+                <img src="./img/pexels-jose-francisco-fernandez-saura-802024.jpg" alt="">
+                <div class="workGeneral-detalle">
+                    <p class="workGeneral-detalle-titulo">Google Adds</p>
+                    <p class="workGeneral-detalle-subtitulo">View all</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 </body>
