Se egargo el header y los nav links al html

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Marie Je_Suis</title>
+
+    <link rel="shortcut icon" href="./img/alien.jpg">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/477ec0e3c0.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    
+<body> 
+    <!-- Delete body content for other pager -->
+    <header>
+        <nav>
+            <div id="logo">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                Mari Tempone
+            </div>
+            <ul class="nav-links">
+                <li> <a href="#">Home</a> </li>
+                <li> <a href="#">Work</a> </li>
+                <li> <a href="./contact.html">Contact</a> </li>
+            </ul>
+        </nav>
+    </header>
+    CONTACT
 </body>
 </html>
