--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,6 @@
     <script src="https://kit.fontawesome.com/477ec0e3c0.js" crossorigin="anonymous"></script>
 </head>
 <body> 
-    <!-- Delete body content for other pager -->
     <header>
         <nav>
             <div id="logo">
@@ -24,8 +23,8 @@
                 Mari Tempone
             </div>
             <ul class="nav-links">
-                <li> <a href="#about">About</a> </li>
-                <li> <a href="#workGeneral">Work</a> </li>
+                <li> <a href="#">Home</a> </li>
+                <li> <a href="#">Work</a> </li>
                 <li> <a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
@@ -34,7 +33,7 @@
         <section id="introduction" class="d-flex">
             <div class="container">
                 <div class="int-banner">
-                    <h1>
+                    <h1 class="home">
                        Hi! I am Mari Tempone. <br>
                        I am a graphic designer based in Buenos Aires <br>
                        working on branding, visual identities, <br>
@@ -48,33 +47,47 @@
             </div>
         </section>
 
-        <section class="workGeneral">
-            <div id="visuals">
-                <img src="./img/pexels-sound-on-3761152.jpg" alt="">
-                <div class="workGeneral-detalle">
-                    <p class="workGeneral-detalle-titulo">Visuals</p>
-                    <p class="workGeneral-detalle-subtitulo">View all</p>
+        <section class="myWork">
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 1</p>
+                    <p>View all</p>
                 </div>
             </div>
-            <div id="webDesign">
-                <img src="./img/pexels-junior-teixeira-2047905.jpg" alt="">
-                <div class="workGeneral-detalle">
-                    <p class="workGeneral-detalle-titulo">Web Design</p>
-                    <p class="workGeneral-detalle-subtitulo">View all</p>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 2</p>
+                    <p>View all</p>
                 </div>
             </div>
-            <div id="Social Media">
-                <img src="./img/pexels-oladimeji-ajegbile-3314294.jpg" alt="">
-                <div class="workGeneral-detalle">
-                    <p class="workGeneral-detalle-titulo">Social Media</p>
-                    <p class="workGeneral-detalle-subtitulo">View all</p>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 3</p>
+                    <p>View all</p>
                 </div>
             </div>
-            <div id="Google Adds">
-                <img src="./img/pexels-jose-francisco-fernandez-saura-802024.jpg" alt="">
-                <div class="workGeneral-detalle">
-                    <p class="workGeneral-detalle-titulo">Google Adds</p>
-                    <p class="workGeneral-detalle-subtitulo">View all</p>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 4</p>
+                    <p>View all</p>
+                </div>
+            </div>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p id="Title">Titulo 5</p>
+                    <p id="view all">View all</p>
+                </div>
+            </div>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 6</p>
+                    <p>View all</p>
                 </div>
             </div>
         </section>
