se agrego footer

--- a/mywork.html
+++ b/mywork.html
@@ -16,20 +16,36 @@
     <script src="https://kit.fontawesome.com/477ec0e3c0.js" crossorigin="anonymous"></script>
 </head>
 <body> 
-    <!-- Delete body content for other pager -->
     <header>
         <nav>
             <div id="logo">
                 <i class="fa-solid fa-wand-magic-sparkles"></i>
-                Mari Tempone
+                <a href="#introduction">Mari Tempone</a> 
             </div>
             <ul class="nav-links">
-                <li> <a href="#">Home</a> </li>
-                <li> <a href="#">Work</a> </li>
+                <li> <a href="index.html#introduction">Home</a> </li>
+                <li> <a href="index.html#myWork">Work</a> </li>
                 <li> <a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
     </header>
-    MYWORK
+    <main>
+
+    </main>
+    
+    <footer>
+        <div id="icons">
+            <a href="https://www.instagram.com/petit_lamb/?hl=en" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="https://wa.me/5491121688626" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+            <a href="https://www.linkedin.com/in/maria-silva-temponis-b1345490/?locale=en_US" target="_blank"> <i class="fa-brands fa-linkedin fa-2xl"></i></Inp></a>
+        </div>
+        <div id="footer-text">
+            <p>
+                Todos los derechos reservados <br>
+                Francis Herrera - 2022
+            </p>
+        </div>
+    </footer>
+
 </body>
 </html>
