Se agrego footer, se agregaron dos imagenes a seccion myWork

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <nav>
             <div id="logo">
                 <i class="fa-solid fa-wand-magic-sparkles"></i>
-                Mari Tempone
+                <a href="#introduction">Mari Tempone</a> 
             </div>
             <ul class="nav-links">
-                <li> <a href="#">Home</a> </li>
-                <li> <a href="#">Work</a> </li>
+                <li> <a href="index.html#introduction">Home</a> </li>
+                <li> <a href="index.html#myWork">Work</a> </li>
                 <li> <a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
@@ -47,52 +47,82 @@
             </div>
         </section>
 
-        <section class="myWork">
-            <div class="myWork-item">
+        <section class="myWork" id="myWork">
+            <div class="myWork-item" >
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 1</p>
-                    <p>View all</p>
+                    <p>Título 1</p>
+                    <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
                     <p>Titulo 2</p>
-                    <p>View all</p>
+                    <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
                     <p>Titulo 3</p>
-                    <p>View all</p>
+                    <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
                     <p>Titulo 4</p>
-                    <p>View all</p>
+                    <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
                     <p id="Title">Titulo 5</p>
-                    <p id="view all">View all</p>
+                    <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
                     <p>Titulo 6</p>
-                    <p>View all</p>
+                    <a href="./mywork.html">See all</a>
+                </div>
+            </div>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 7</p>
+                    <a href="./mywork.html">See all</a>
+                </div>
+            </div>
+            <div class="myWork-item">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="myWork-item-title">
+                    <p>Titulo 8</p>
+                    <a href="./mywork.html">See all</a>
                 </div>
             </div>
         </section>
+        <div id="workTogether">
+            <a href="./contact.html">Let's work together!</a>
+        </div>
+        
     </main>
-
+    <footer>
+        <div id="icons">
+            <a href="https://www.instagram.com/petit_lamb/?hl=en" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="https://wa.me/5491121688626" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+            <a href="https://www.linkedin.com/in/maria-silva-temponis-b1345490/?locale=en_US" target="_blank"> <i class="fa-brands fa-linkedin fa-2xl"></i></Inp></a>
+        </div>
+        <div id="footer-text">
+            <p>
+                Todos los derechos reservados <br>
+                Francis Herrera - 2022
+            </p>
+        </div>
+    </footer>
 
 </body>
 </html>
