se agrego el link del nombre en el header que lleva al Home

--- a/mywork.html
+++ b/mywork.html
@@ -20,7 +20,7 @@
         <nav>
             <div id="logo">
                 <i class="fa-solid fa-wand-magic-sparkles"></i>
-                <a href="#introduction">Mari Tempone</a> 
+                <a href="./index.html#introduction">Mari Tempone</a> 
             </div>
             <ul class="nav-links">
                 <li> <a href="index.html#introduction">Home</a> </li>
