--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <nav>
             <div id="logo">
                 <i class="fa-solid fa-wand-magic-sparkles"></i>
-                <a href="#introduction">Mari Tempone</a> 
+                <a href="./index.html#introduction">Mari Tempone</a> 
             </div>
             <ul class="nav-links">
                 <li> <a href="index.html#introduction">Home</a> </li>
@@ -31,26 +31,33 @@
     </header>
     <main>
         <section class="contact">
-            <h2>Have any questions?</h2>
-            <h3>Contact me!</h3>
-
-            <form action="" method="post" enctype="multipart/form-data" id="formularioContacto">
-                <label for="">First Name</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Nombre" size="20" maxlength="50">
-                <br>
-                <label for="">Last Name</label>
-                <input type="text" name="apellido" id="apellido" placeholder="Apellido" size="20" maxlength="50">
-                <br>
-                <label for="">Email</label>
-                <input type="email" name="email" id="email" placeholder="ej.: nombre@gmail.com" size="20" maxlength="50">
-                <br>
-                <label for="">Description</label>
-                <textarea name="consulta" id="consulta" placeholder= "Escriba aquí su consulta" cols="20" rows="10"></textarea>
-                <br><br>
-                <input type="submit" value="Enviar">
-            </form>
-
-            <iframe
+            <div>
+                <p id="questions">Have any questions?</p>
+                <p id="contact-me">Contact me!</p>
+            </div>
+            <div>
+                <form action="" method="post" enctype="multipart/form-data" id="formularioContacto">
+                    <label for="" class="field"></label>
+                    <input type="text" name="nombre" id="nombre" placeholder="First Name" size="25" maxlength="50">
+                    <br>
+                    <label for="" class="field"></label>
+                    <input type="text" name="apellido" id="apellido" placeholder="Last Name" size="25" maxlength="50">
+                    <br>
+                    <label for="" class="field"></label>
+                    <input type="email" name="email" id="email" placeholder="Email (eg.: name@gmail.com)" size="25" maxlength="50">
+                    <br>
+                    <label for="" class="field"></label>
+                    <textarea name="consulta" id="mensaje" placeholder= "Write your message here" cols="25" rows="10"></textarea>
+                    <br><br>
+                    <input id= button type="submit" value="Send">
+                </form>
+            </div>          
+            <div>
+                <div id="meet">
+                    <p>Are you in the area?</p>
+                    <p>Let's meet!</p>
+                </div>
+                <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52563.43852820766!2d-58.45603493802436!3d-34.5734283494888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1653516028903!5m2!1sen!2sar"
                 width="400"
                 height="400"
@@ -58,7 +65,9 @@
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+                </iframe>
+            </div>
+            
         </section>
     </main>
     
