--- a/index.html
+++ b/index.html
@@ -51,57 +51,55 @@
             <div class="myWork-item" >
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Título 1</p>
+                    <p>Branding</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 2</p>
+                    <p>Web Digital Design</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 3</p>
+                    <p>Social Media</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 4</p>
+                    <p>E-Commerce</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p id="Title">Titulo 5</p>
+                    <p>Visuals</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 6</p>
+                    <p>Packaging</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 7</p>
-                    <a href="./mywork.html">See all</a>
+                    <p>Editorial Design</p>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="https://picsum.photos/400/300" alt="">
                 <div class="myWork-item-title">
-                    <p>Titulo 8</p>
-                    <a href="./mywork.html">See all</a>
+                    <p>Photography</p>                    
                 </div>
             </div>
         </section>
