Se agregaron las fotos finales a la seccion myWork y a las portadas del index.html. Se creo un carousel para la seccion Work (see all)

--- a/index.html
+++ b/index.html
@@ -49,55 +49,55 @@
 
         <section class="myWork" id="myWork">
             <div class="myWork-item" >
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src= "./img/Portada branding GIF (1).gif" alt="">
                 <div class="myWork-item-title">
                     <p>Branding</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada web GIF.gif" alt="">
                 <div class="myWork-item-title">
-                    <p>Web Digital Design</p>
+                    <p>Digital/Web Design</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada Redes.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Social Media</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada ecommerce GIF.gif" alt="">
                 <div class="myWork-item-title">
                     <p>E-Commerce</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada audiovisual GIF.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Visuals</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada Packaging (1).gif" alt="">
                 <div class="myWork-item-title">
                     <p>Packaging</p>
                     <a href="./mywork.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada editorial.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Editorial Design</p>
                 </div>
             </div>
             <div class="myWork-item">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="./img/Portada fotografia.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Photography</p>                    
                 </div>
