--- a/mywork.html
+++ b/mywork.html
@@ -34,6 +34,9 @@
         </nav>
     </header>
     <main>
+        <div>
+            <h3>Branding</h3>
+        </div>
         <div class="container">
             <div class="glide">
                 <div class="glide__track" data-glide-el="track">
@@ -60,7 +63,7 @@
             const config = {
                 type: 'carousel',
                 perView: 5,
-
+                focusAt: 'center',
             }
             new Glide('.glide', config).mount();
         </script>
