Se corrigio error de carousel, se separo la seccion mywork en 6 secciones de diseño, se edito estilo de botones slider y se creo uno para video

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         </div>
         <div id="footer-text">
             <p>
-                Todos los derechos reservados <br>
+                All rights reserved <br>
                 Francis Herrera - 2022
             </p>
         </div>
