--- a/index.html
+++ b/index.html
@@ -52,42 +52,42 @@
                 <img src= "./img/Portada branding GIF (1).gif" alt="">
                 <div class="myWork-item-title">
                     <p>Branding</p>
-                    <a href="./mywork.html">See all</a>
+                    <a href="./Branding.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="./img/Portada web GIF.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Digital/Web Design</p>
-                    <a href="./mywork.html">See all</a>
+                    <a href="./digitalDesign.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="./img/Portada Redes.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Social Media</p>
-                    <a href="./mywork.html">See all</a>
+                    <a href="./socialMedia.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="./img/Portada ecommerce GIF.gif" alt="">
                 <div class="myWork-item-title">
                     <p>E-Commerce</p>
-                    <a href="./mywork.html">See all</a>
+                    <a href="./e-commerce.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="./img/Portada audiovisual GIF.gif" alt="">
                 <div class="myWork-item-title">
                     <p>Visuals</p>
-                    <a href="./mywork.html">See all</a>
+                    <a href="./Visuals.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
                 <img src="./img/Portada Packaging (1).gif" alt="">
                 <div class="myWork-item-title">
                     <p>Packaging</p>
-                    <a href="./mywork.html">See all</a>
+                    <a href="./Packaging.html">See all</a>
                 </div>
             </div>
             <div class="myWork-item">
@@ -116,7 +116,7 @@
         </div>
         <div id="footer-text">
             <p>
-                Todos los derechos reservados <br>
+                All rights reserved <br>
                 Francis Herrera - 2022
             </p>
         </div>
