--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <nav>
             <div id="logo">
-                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <a href="https://drive.google.com/drive/folders/1kCXpNpJAD8qXTdgSvnZTgs44HQkP03W0" target="_blank"><i class="fa-solid fa-wand-magic-sparkles"></i></a>
                 <a href="#introduction">Mari Tempone</a> 
             </div>
             <ul class="nav-links">
@@ -115,6 +115,7 @@
             <a href="https://www.linkedin.com/in/maria-silva-temponis-b1345490/?locale=en_US" target="_blank"> <i class="fa-brands fa-linkedin fa-2xl"></i></Inp></a>
         </div>
         <div id="footer-text">
+            <hr>
             <p>
                 All rights reserved <br>
                 Francis Herrera - 2022
