--- a/Visuals.html
+++ b/Visuals.html
@@ -23,7 +23,7 @@
     <header>
         <nav>
             <div id="logo">
-                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <a href="https://drive.google.com/drive/folders/1kCXpNpJAD8qXTdgSvnZTgs44HQkP03W0" target="_blank"><i class="fa-solid fa-wand-magic-sparkles"></i></a>
                 <a href="./index.html#introduction">Mari Tempone</a> 
             </div>
             <ul class="nav-links">
